Store preferred application in mimeapps.list (bug #6800).
Because the gio plugin is not workin in glib 2.27, we need another
way to use our preferred application framework in GIO apps. So
make sure the x-scheme-handler/<uri> types supported by exo-open
are stored in mimeapps.list, so they are use by gio when selecting
the default application handler.

--- a/po/ast.po
+++ b/po/ast.po
@@ -1031,8 +1031,8 @@ msgstr "Nun s'especificó dengún comandu"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Fallu al abrir helpers.rc pa escritura"
+msgid "Failed to open %s for writing"
+msgstr "Fallu al abrir %s pa escritura"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
