--- a/po/bn.po
+++ b/po/bn.po
@@ -1025,8 +1025,8 @@ msgstr "কোন কমান্ড উল্লেখ করা হয়নি"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "লেখার জন্য helpers.rc খুলতে ব্যর্থ"
+msgid "Failed to open %s for writing"
+msgstr "লেখার জন্য %s খুলতে ব্যর্থ"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
