--- a/po/ca.po
+++ b/po/ca.po
@@ -1025,8 +1025,8 @@ msgstr "No heu especificat cap ordre"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "No s'ha pogut obrir helpers.rc per escriptura"
+msgid "Failed to open %s for writing"
+msgstr "No s'ha pogut obrir %s per escriptura"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
