--- a/po/de.po
+++ b/po/de.po
@@ -1018,8 +1018,8 @@ msgstr "Kein Befehl angegeben"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Konnte »helpers.rc« nicht zum Schreiben öffnen"
+msgid "Failed to open %s for writing"
+msgstr "Konnte »%s« nicht zum Schreiben öffnen"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
