--- a/po/dz.po
+++ b/po/dz.po
@@ -1045,8 +1045,8 @@ msgstr "བརྡ་བཀོད་གསལ་བཀོད་འབད་དེ
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "རྩོམ་སྒྲིག་འབད་ནི་དོན་ལུ་  helpers.rc ཁ་ཕྱེ་ནི་འདི་འཐུས་ཤོར་འབྱུང་ནུག"
+msgid "Failed to open %s for writing"
+msgstr "རྩོམ་སྒྲིག་འབད་ནི་དོན་ལུ་  %s ཁ་ཕྱེ་ནི་འདི་འཐུས་ཤོར་འབྱུང་ནུག"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
