--- a/po/eu.po
+++ b/po/eu.po
@@ -1022,8 +1022,8 @@ msgstr "Ez da komandoa ezarri"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Huts helpers.rc idazteko idazterakoan"
+msgid "Failed to open %s for writing"
+msgstr "Huts %s idazteko idazterakoan"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
