--- a/po/fi.po
+++ b/po/fi.po
@@ -1025,8 +1025,8 @@ msgstr "Ei komentoa määritetty"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Tiedoston helpers.rc avaaminen kirjoitettavaksi epäonnistui"
+msgid "Failed to open %s for writing"
+msgstr "Tiedoston %s avaaminen kirjoitettavaksi epäonnistui"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
