--- a/po/gl.po
+++ b/po/gl.po
@@ -1030,8 +1030,8 @@ msgstr "Non se especificou ningunha orde"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Produciuse un erro ao abrir helpers.rc para escritura"
+msgid "Failed to open %s for writing"
+msgstr "Produciuse un erro ao abrir %s para escritura"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
