--- a/po/hu.po
+++ b/po/hu.po
@@ -1020,8 +1020,8 @@ msgstr "Nincs megadva parancs"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "A helpers.rc nem nyitható meg írásra"
+msgid "Failed to open %s for writing"
+msgstr "A %s nem nyitható meg írásra"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
