--- a/po/id.po
+++ b/po/id.po
@@ -1020,8 +1020,8 @@ msgstr "Tidak ada perintah ditentukan"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Gagal membuka helpers.rc untuk menulis"
+msgid "Failed to open %s for writing"
+msgstr "Gagal membuka %s untuk menulis"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
