--- a/po/it.po
+++ b/po/it.po
@@ -1039,8 +1039,8 @@ msgstr "Nessun comando specificato"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Impossibile aprire \"helpers.rc\" in scrittura"
+msgid "Failed to open %s for writing"
+msgstr "Impossibile aprire \"%s\" in scrittura"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
