--- a/po/ja.po
+++ b/po/ja.po
@@ -1102,8 +1102,8 @@ msgstr "コマンドが指定されていません"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "書き込むために helpers.rc を開くことに失敗しました"
+msgid "Failed to open %s for writing"
+msgstr "書き込むために %s を開くことに失敗しました"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
