--- a/po/kk.po
+++ b/po/kk.po
@@ -1019,8 +1019,8 @@ msgstr "Команда көрсетілмеген"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Жазу үшін helpers.rc ашу сәтсіз аяқталды"
+msgid "Failed to open %s for writing"
+msgstr "Жазу үшін %s ашу сәтсіз аяқталды"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
