--- a/po/pl.po
+++ b/po/pl.po
@@ -1042,8 +1042,8 @@ msgstr "Nie określono polecenia"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Nie udało się otworzyć pliku helpers.rc do zapisu"
+msgid "Failed to open %s for writing"
+msgstr "Nie udało się otworzyć pliku %s do zapisu"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
