--- a/po/ro.po
+++ b/po/ro.po
@@ -1041,8 +1041,8 @@ msgstr "Nu s-a specificat o comandă"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Nu s-a putut deschide „helpers.rc” pentru scriere"
+msgid "Failed to open %s for writing"
+msgstr "Nu s-a putut deschide „%s” pentru scriere"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
