--- a/po/ru.po
+++ b/po/ru.po
@@ -1040,8 +1040,8 @@ msgstr "Не указан комментарий"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Не удалось открыть файл helpers.rc для записи"
+msgid "Failed to open %s for writing"
+msgstr "Не удалось открыть файл %s для записи"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
