--- a/po/sv.po
+++ b/po/sv.po
@@ -1035,8 +1035,8 @@ msgstr "Inget kommando angavs"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Misslyckades med att öppna helpers.rc för skrivning"
+msgid "Failed to open %s for writing"
+msgstr "Misslyckades med att öppna %s för skrivning"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
