--- a/po/tr.po
+++ b/po/tr.po
@@ -1041,8 +1041,8 @@ msgstr "Belirlenmiş komut yok"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "helpers.rc, yazılacak şekilde açılamadı"
+msgid "Failed to open %s for writing"
+msgstr "%s, yazılacak şekilde açılamadı"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
