--- a/po/ug.po
+++ b/po/ug.po
@@ -1078,8 +1078,8 @@ msgstr "بۇيرۇق بېكىتىلمىگەن"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "يېزىش مەقسىتىدە helpers.rc نى ئېچىش مەغلۇپ بولدى"
+msgid "Failed to open %s for writing"
+msgstr "يېزىش مەقسىتىدە %s نى ئېچىش مەغلۇپ بولدى"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
