--- a/po/uk.po
+++ b/po/uk.po
@@ -1020,8 +1020,8 @@ msgstr "Команду не призначено"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Помилка відкриття helpers.rc для запису"
+msgid "Failed to open %s for writing"
+msgstr "Помилка відкриття %s для запису"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
