--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1001,7 +1001,7 @@ msgstr "没有指定命令"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
+msgid "Failed to open %s for writing"
 msgstr "无法打开文件 helper.rc"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
