--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1020,8 +1020,8 @@ msgstr "尚未指定指令"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "無法開啟要寫入的 helpers.rc"
+msgid "Failed to open %s for writing"
+msgstr "無法開啟要寫入的 %s"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
