--- a/po/be.po
+++ b/po/be.po
@@ -1037,8 +1037,8 @@ msgstr "Загад ня вызначаны"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Немагчыма адкрыць helpers.rc для запісу"
+msgid "Failed to open %s for writing"
+msgstr "Немагчыма адкрыць %s для запісу"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
