--- a/po/cs.po
+++ b/po/cs.po
@@ -1045,8 +1045,8 @@ msgstr "Nebyl zadán žádný příkaz"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Nepodařilo se otevřít soubor helpers.rc pro zápis"
+msgid "Failed to open %s for writing"
+msgstr "Nepodařilo se otevřít soubor %s pro zápis"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
