--- a/po/cy.po
+++ b/po/cy.po
@@ -1037,8 +1037,8 @@ msgstr "Ni benodwyd gorchymyn"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Methu agor helpers.rc ar gyfer ysgrifennu "
+msgid "Failed to open %s for writing"
+msgstr "Methu agor %s ar gyfer ysgrifennu "
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
