--- a/po/da.po
+++ b/po/da.po
@@ -1022,8 +1022,8 @@ msgstr "Ingen kommando valgt"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Kunne ikke åbne helpers.rc i skrivetilstand"
+msgid "Failed to open %s for writing"
+msgstr "Kunne ikke åbne %s i skrivetilstand"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
