--- a/po/el.po
+++ b/po/el.po
@@ -1038,8 +1038,8 @@ msgstr "Δεν ορίστηκε εντολή"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Απέτυχε το άνοιγμα του helpers.rc για εγγραφή"
+msgid "Failed to open %s for writing"
+msgstr "Απέτυχε το άνοιγμα του %s για εγγραφή"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
