--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1039,8 +1039,8 @@ msgstr "No command specified"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Failed to open helpers.rc for writing"
+msgid "Failed to open %s for writing"
+msgstr "Failed to open %s for writing"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
