--- a/po/es.po
+++ b/po/es.po
@@ -1022,8 +1022,8 @@ msgstr "No se especificó ningún comando"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Fallo al abrir helpers.rc para escritura"
+msgid "Failed to open %s for writing"
+msgstr "Fallo al abrir %s para escritura"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
