--- a/po/et.po
+++ b/po/et.po
@@ -1039,8 +1039,8 @@ msgstr "Käsku pole määratud"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "helpers.rc avamine kirjutamiseks ei õnnestunud"
+msgid "Failed to open %s for writing"
+msgstr "%s avamine kirjutamiseks ei õnnestunud"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
