--- a/po/fr.po
+++ b/po/fr.po
@@ -1035,8 +1035,8 @@ msgstr "Aucune commande n'a été précisée"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Impossible d'ouvrir helpers.rc en écriture"
+msgid "Failed to open %s for writing"
+msgstr "Impossible d'ouvrir %s en écriture"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
