--- a/po/he.po
+++ b/po/he.po
@@ -1021,7 +1021,7 @@ msgstr "לא נבחרה פקודה."
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
+msgid "Failed to open %s for writing"
 msgstr "כשל בפתיחת helper.rc לכתיבה"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
