--- a/po/ka.po
+++ b/po/ka.po
@@ -982,7 +982,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
+msgid "Failed to open %s for writing"
 msgstr ""
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
