--- a/po/lv.po
+++ b/po/lv.po
@@ -1039,8 +1039,8 @@ msgstr "Nav norādīta komanda"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Neizdevās atvērt helpers.rc rakstīšanai"
+msgid "Failed to open %s for writing"
+msgstr "Neizdevās atvērt %s rakstīšanai"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
