--- a/po/mk.po
+++ b/po/mk.po
@@ -1046,8 +1046,8 @@ msgstr "Не е посочена команда"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Не успеа да го отвори helpers.rc за запишување"
+msgid "Failed to open %s for writing"
+msgstr "Не успеа да го отвори %s за запишување"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
