--- a/po/nb.po
+++ b/po/nb.po
@@ -1039,8 +1039,8 @@ msgstr "Ingen kommando er angitt"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Klarte ikke åpne helpers.rc for skriving"
+msgid "Failed to open %s for writing"
+msgstr "Klarte ikke åpne %s for skriving"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
