--- a/po/nl.po
+++ b/po/nl.po
@@ -1042,8 +1042,8 @@ msgstr "Geen commando opgegeven"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Kon helpers.rc niet openen om naar te schrijven"
+msgid "Failed to open %s for writing"
+msgstr "Kon %s niet openen om naar te schrijven"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
