--- a/po/pa.po
+++ b/po/pa.po
@@ -1026,8 +1026,8 @@ msgstr "ਕੋਈ ਕਮਾਂਡ ਨਹੀਂ ਦਿੱਤੀ ਗਈ"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "ਲਿਖਣ ਵਾਸਤੇ helpers.rc ਖੋਲ੍ਹਣ ਲਈ ਫੇਲ੍ਹ ਹੈ"
+msgid "Failed to open %s for writing"
+msgstr "ਲਿਖਣ ਵਾਸਤੇ %s ਖੋਲ੍ਹਣ ਲਈ ਫੇਲ੍ਹ ਹੈ"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
