--- a/po/pt.po
+++ b/po/pt.po
@@ -1019,8 +1019,8 @@ msgstr "Nenhum comando especificado"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Falha ao abrir \"helpers.rc\" para escrita"
+msgid "Failed to open %s for writing"
+msgstr "Falha ao abrir \"%s\" para escrita"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
