--- a/po/sk.po
+++ b/po/sk.po
@@ -1024,7 +1024,7 @@ msgstr "Nebol zadaný žiadny príkaz"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
+msgid "Failed to open %s for writing"
 msgstr "Nepodarilo sa otvoriť súbor helpers rc pre zápis"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
