--- a/po/sl.po
+++ b/po/sl.po
@@ -1003,7 +1003,7 @@ msgstr "Ni določenega ukaza"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
+msgid "Failed to open %s for writing"
 msgstr ""
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
