--- a/po/sq.po
+++ b/po/sq.po
@@ -1044,8 +1044,8 @@ msgstr "Pa urdhër të përcaktuar"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Dështoi në hapjen e helpers.rc për shkrim"
+msgid "Failed to open %s for writing"
+msgstr "Dështoi në hapjen e %s për shkrim"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
