--- a/po/tl_PH.po
+++ b/po/tl_PH.po
@@ -1041,8 +1041,8 @@ msgstr "Walang utos na minungkahi"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "Hindi tagumpay sa pagbukas ng helpers.rc upang sulatan"
+msgid "Failed to open %s for writing"
+msgstr "Hindi tagumpay sa pagbukas ng %s upang sulatan"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
