--- a/po/ur_PK.po
+++ b/po/ur_PK.po
@@ -1040,8 +1040,8 @@ msgstr "کوئی کمانڈ متعین نہیں کی گئی"
 
 #: ../exo-helper/exo-helper.c:684
 #, c-format
-msgid "Failed to open helpers.rc for writing"
-msgstr "لکھنے کے لیے helpers.rc کو کھولنے میں ناکامی"
+msgid "Failed to open %s for writing"
+msgstr "لکھنے کے لیے %s کو کھولنے میں ناکامی"
 
 #: ../exo-helper/exo-preferred-applications.desktop.in.h:2
 msgid "Preferred Applications (Web Browser, Mail Reader and Terminal Emulator)"
