Updates for release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+0.5.6
+=====
+- Set application name for Thunar loop detection.
+- Fix ABI check on ppc (bug #7008).
+- Quote filenames with a space in the desktop editor (bug #6951).
+- Translation updates (zh_CN, pt_BR, de, hu, pt, de, cs, en_GB,
+  nb, sv, ar).
+
 0.5.5
 =====
 - Fix opening of URIs with spaces in claws-mail and sylpheed.
